03.au/04.skilled/01.189/default.md
---
title: 澳洲189独立技术移民
menu: 澳洲189签证
taxonomy:
    category: docs

metadata:
    refresh: 0
    generator: 'flyabroad'
    description: '澳洲189技术移民签证俗称独立技术移民，不需要州担保和亲属担保。189签证是一个长期签证，申请成功后可以无限期居住在澳洲，申请人及其家人可以在这里工作、学习以及参加澳大利亚的医疗保险。申请189签证的前提是职业在MLTSSL上，并且EOI评分达到65分。'
    keywords: '189签证,澳洲独立技术移民,189 visa,189独立技术移民'
    author: 'flyabroad'
---

# 澳洲189独立技术移民

[飞出国](/home):澳洲189技术移民签证俗称独立技术移民，不需要州担保和亲属担保。189签证是一个长期签证，申请成功后可以无限期居住在澳洲，申请人及其家人可以在这里工作、学习以及参加澳大利亚的医疗保险。申请189签证的前提是职业在[MLTSSL]上，并且[EOI]评分达到65分。

## 189签证申请条件 - 飞出国

* 申请人被邀请申请签证之时，年龄小于45岁；
* 职业属于 [MLTSSL] 中长期职业类别，通过职业评估；
* 提交[EOI]，并获得邀请；
* [EOI]评分达到65分或更高；
* 雅思达到4个6的 Competent English 成绩，成绩三年内有效；
* 身体健康，品行良好，无犯罪记录。

## 189签证申请流程 - 飞出国

1. 自我评估[EOI]评分达到65分（某些职业可能需要65甚至更高分数才能获邀）；
2. 选择合适的职业；
3. 通过对应职业的职业评估；
4. 雅思达到4个6；
5. 注册并提交[EOI]；
6. 收到签证邀请；
7. 收到签证邀请后在60天内递交签证申请；
8. 体检通知，配偶交语言费或雅思通知；
9. 获签。

## 189签证审理周期 - 飞出国

* 职业评估阶段：1-3个月
* 签证申请阶段：75%需要8个月，90%需要11个月

## 189签证申请费用 - 飞出国

* 签证申请费：
    * 主申请人：3755澳币
    * 配偶及18岁以上的子女：1875澳币
    * 18岁以下的子女：940澳币
* 语言培训费：配偶或年满18岁随行子女雅思没有达到总分4.5的话需要缴纳语言学习费4885澳币/人

## 189签证材料清单 - 飞出国

序号 | 所需材料 - 飞出国 | 材料要求 - flyabroad | 主申 | 副申 | 子女
------- | ------- | ------- | ------- | ------- | -------
1 | 出生公证 | 可能需要去公证处拿单子，去户籍所在地派出所盖章，咨询当地公证处（参考出生公证办理指南） | √ | √ |  |
2 | 出生医学证明公证 | 将孩子的出生医学证明公证（公证里带有出生医学证明的复印件），不是普通的出生公证 | √ |  |  |
3 | 曾用名公证 | 检查户口页，如果有，列明曾用名，做公证 | 如适用 | 如适用 | 如适用
4 | 结婚证公证 | 公证主申请为持证人的那份 | √ |  |  |
5 | 雅思成绩单 | 提供申请前两年内考出的成绩单 | √ |  |  |
6 | 雅思成绩单或语言学习费 | 1. 提供申请前1年内考出的成绩单，平均分不低于4.5分。签证申请时可以不提供，至少保证分到签证官的28天内确保至少已经雅思报名。2. 如果无法考出雅思成绩，需缴纳4885澳币的语言学习费（预签后缴纳） | √ |  |  |
7 | 职业评估通过函 | 必须在有效期内 | √ | 如适用 |  | 
8 | 学位学历公证 | 专科毕业证、本科毕业证、本科学位证、硕士毕业证、硕士学位证（如果学校能在证书复印件与翻译件上盖章（学校/学院公章/档案室章/教务处章），就不必公证了） | √ |  |  |
9 | 学位证教育部认证件 | 本科学位证、硕士学位证、博士学位证教育部认证，我们帮您申请，您在线进行支付，办理周期比较长，请尽快 | √ |  |  |
10 | 成绩单 | 专科、本科、硕士中英文成绩单盖章件 | √ |  | |
11 | 推荐信 | 近8/5/3年内的雇主推荐信；当前公司推荐信需要更新时间，注意替换，打印，签字 | √ |  |  |
12 | 工作证明材料 | 提供近8/5/3年工作的合同、工资单、个税证明、社保证明（尽量提供） | √ |  |  |
13 | 资格证书 | 提供与工作职位相关的资格证书 | 非必须 |  |  |
14 | 简历 | 如果有职位职责变动，需要更新简历 | 如适用 |  | | 
15 | 护照 | 护照首页、签字的尾页、签证页 | √ | √ | √
16 | 移民照片 | 3.5cm*4.5cm，近期的（6个月内），彩照，纯白底色-可以是数码相机拍摄的电子版（照片头像，下巴到额头的尺寸是25mm到30mm之间） | √ | √ | √
17 | 其他资料 | 如配偶已做职业评估并考过雅思（雅思可以是近三年内的），需要给该申请加5分，则需和主申一样提供学历和工作方面的材料，参考主申 | 如适用 |  | | 
18 | 申请表 | 80表、1221表，签字扫描 | √ | √ | | 
19 | 签证申请费 | 主申3670澳币，副申1835澳币，小孩920澳币，总计XXX澳币（用具有国际支付功能的双币信用卡支付）另外，在线支付需要扣除手续费如下：• Visa and MasterCard* - 1.08% • American Express and JCB - 1.99% • Diners Club International - 2.91% | √ | √ | √
20 | 国内无犯罪公证 | 16周岁以上的申请人，需要去户籍所在地管辖派出所办理无犯罪证明然后公证（有有效期，可以等其他材料办好之后再去开具） | √ | √ | 如适用
21 | 国外无犯罪公证 | 任何16周岁后并且10年内连续居住超过半年或累计居住超过1年的国家都需要提供无犯罪证明公证（办理周期相对较长，需要提前准备） | √ | √ | 如适用

----

> 以上内容由（[飞出国技术移民](http://js.flyabroad.com.hk)）独家整理完成，请尊重知识产权，转载请保留并注明出处。（2020-08-25更新）

> 欢迎关注飞出国移民公众号 <font color=Blue>(微信号fcg-js)</font> 获取更多信息，也可直接联系飞出国工作人员 <font color=Blue>（微信号flyabroad-nina)</font> 直接进行沟通。

[ceiling]:/au/skilledselect/ceilings
[MLTSSL]:/au/occupations-lists/MLTSSL
[EOI评分]:/au/skilledselect
[Competent]:/au/skilledselect/english-requirement
[SkillSelect]: /au/skilledselect
[飞出国论坛]: http://bbs.fcgvisa.com?target=blank 
[飞出国香港]: http://flyabroad.hk?target=blank 
[飞出国]:http://flyabroad.me/contact/?target=blank 
[MLTSSL]: /au/skillselect/MLTSSL
[ceiling]: /au/skillselect/ceiling
[SkillSelect]: /au/skillselect/
[189]:/au/skilled/189
[MLTSSL]:/au/occupations-lists/MLTSSL
[190]:/au/skilled/190
[STSOL]:/au/occupations-lists/STSOL
[489]:/au/skilled/489
[EOI]:/au/skilledselect/EOI