03.au/04.skilled/02.190/default.md
---
title: 澳洲190州担保技术移民
menu: 澳洲190签证
taxonomy:
    category: docs

metadata:
    refresh: 0
    generator: 'flyabroad'
    description: '澳洲190州担保技术移民签证针对被澳大利亚某个州或领地政府担保的技术工人，可以获得永居身份在澳大利亚工作生活。澳洲190签证适合自身分数只有55分的申请人，加上州担保额外的5分，可以满足65分申请条件。申请州担保，要看申请人评估的职业是否有州担保且满足州担保的其它要求（比如英语能力，工作年限，job offer或注册要求等等）。'
    keywords: '澳洲190签证,澳洲州担保技术移民,190 visa,190州担保'
    author: 'flyabroad'
---

# 190州担保技术移民

[飞出国](/home):澳洲[190]州担保签证适合自身分数只有60分的申请人，拿到澳洲某个州的[190]提名函可以在[EOI]打分中获得5分加分，这样即可达到65分合格线了。能否申请到州担保需要看申请人评估的职业是否在州担保的职业清单中，以及是否符合州政府担保的其他要求（雅思、工作年限、offer或注册等）。

[190]签证与[189]签证一样属于一步到位的永久居民(PR)签证,不同的是[189]是联邦性质的移民签证，成功移民后可以去澳洲任何地方定居，而[190]属于州担保性质的移民签证，成功移民后在澳洲的前两年必须在担保的州定居（累计两年，中间可以回国或去澳洲其他州旅游）。

## 190签证申请条件 - 飞出国

* 申请人被邀申请签证之时，年龄小于45岁；
* 职业属于 [MLTSSL] 或 [STSOL] 移民职业列表,通过职业评估；
* 雅思达到4个6的Competent English成绩，成绩三年内有效；
* 获得州或领地政府担保提名；
* EOI评分达到65分或以上(包含州担保5分)，获得[EOI]邀请;
* 身体健康，品行良好，无犯罪记录。

## 190签证申请流程 - 飞出国

1. [EOI]评分达到65分（包含州担保5分）；
2. 选择适合自己的职业，职业可以属于[MLTSSL]或[STSOL]；
3. 通过对应职业的职业评估；
4. 雅思达到4个6；
5. 注册并提交[EOI]；
6. 申请[190]州担保或[489]偏远地区担保（有的州可以直接申请，有的州需要等待州邀请后，再递交州担保申请）；
7. 担保通过，收到签证邀请；
8. 收到签证邀请后在60天内递交签证申请；
9. 体检通知，配偶交语言费或雅思通知；
10. 获签。

## 190签证审理周期 - 飞出国

* 职业评估阶段： 1-3个月
* 州担保阶段：1-3个月
* 签证申请阶段：75%需要5个月，90%需要8个月

## 190签证申请费用 - 飞出国

* 州担保申请费，除以下州外，其他州免费：
    * WA：200澳币
    * NSW：300澳币
    * QLD：200澳币
    * ACT: 300澳币
* 签证申请费：
    * 主申请人：3755澳币
    * 配偶及18岁以上的子女：1875澳币
    * 18岁以下的子女：940澳币
    * 语言培训费：配偶或年满18岁随行子女雅思没有达到总分4.5的话需要缴纳语言学习费4885澳币/人

## 190签证材料清单 - 飞出国

序号 | 所需材料 - 飞出国 | 材料要求 - flyabroad | 主申 | 副申 | 子女
------- | ------- | ------- | ------- | ------- | -------
1 | 出生公证 | 可能需要去公证处拿单子，去户籍所在地派出所盖章，咨询当地公证处（参考出生公证办理指南） | √ | √ | |
2 | 出生医学证明公证 | 将孩子的出生医学证明公证（公证里带有出生医学证明的复印件），不是普通的出生公证 | √ |  | |
3 | 曾用名公证 | 检查户口页，如果有，列明曾用名，做公证 | 如适用 | 如适用 | 如适用
4 | 结婚证公证 | 公证主申请为持证人的那份 | √ |  | |
5 | 雅思成绩单 | 提供申请前两年内考出的成绩单 | √ |  | |
6 | 雅思成绩单或语言学习费 | 1. 提供申请前1年内考出的成绩单，平均分不低于4.5分。签证申请时可以不提供，至少保证分到签证官的28天内确保至少已经雅思报名。2. 如果无法考出雅思成绩，需缴纳4885澳币的语言学习费（预签后缴纳） | √ |  | |
7 | 职业评估通过函 | 必须在有效期内 | √ | 如适用 | |
8 | 学位学历公证 | 专科毕业证、本科毕业证、本科学位证、硕士毕业证、硕士学位证（如果学校能在证书复印件与翻译件上盖章（学校/学院公章/档案室章/教务处章），就不必公证了） | √ |  | |
9 | 学位证教育部认证件 | 本科学位证、硕士学位证、博士学位证教育部认证，我们帮您申请，您在线进行支付，办理周期比较长，请尽快 | √ |  | |
10 | 成绩单 | 专科、本科、硕士中英文成绩单盖章件 | √ |  | |
11 | 推荐信 | 近8/5/3年内的雇主推荐信；当前公司推荐信需要更新时间，注意替换，打印，签字 | √ |  | |
12 | 工作证明材料 | 提供近8/5/3年工作的合同、工资单、个税证明、社保证明（尽量提供） | √ |  | |
13 | 资格证书 | 提供与工作职位相关的资格证书 | 非必须 |  | |
14 | 简历 | 如果有职位职责变动，需要更新简历 | 如适用 |  | |
15 | 护照 | 护照首页、签字的尾页、签证页 | √ | √ | √
16 | 移民照片 | 3.5cm*4.5cm，近期的（6个月内），彩照，纯白底色-可以是数码相机拍摄的电子版（照片头像，下巴到额头的尺寸是25mm到30mm之间） | √ | √ | √
17 | 其他资料 | 如配偶已做职业评估并考过雅思（雅思可以是近三年内的），需要给该申请加5分，则需和主申一样提供学历和工作方面的材料，参考主申 | 如适用 |  | |
18 | 申请表 | 80表、1221表，签字扫描 | √ | √ | |
19 | 签证申请费 | 主申3670澳币，副申1835澳币，小孩920澳币，总计XXX澳币（用具有国际支付功能的双币信用卡支付），另外，在线支付需要扣除手续费如下：• Visa and MasterCard* - 1.08%；• American Express and JCB - 1.99%；• Diners Club International - 2.91% | √ | √ | √
20 | 国内无犯罪公证 | 16周岁以上的申请人，需要去户籍所在地管辖派出所办理无犯罪证明然后公证（有有效期，可以等其他材料办好之后再去开具） | √ | √ | 如适用
21 | 国外无犯罪公证 | 任何16周岁后并且10年内连续居住超过半年或累计居住超过1年的国家都需要提供无犯罪证明公证（办理周期相对较长，需要提前准备） | √ | √ | 如适用

----

> 以上内容由（[飞出国技术移民](http://js.flyabroad.com.hk)）独家整理完成，请尊重知识产权，转载请保留并注明出处。（2020-08-25更新）

> 欢迎关注飞出国移民公众号 <font color=Blue>(微信号fcg-js)</font> 获取更多信息，也可直接联系飞出国工作人员 <font color=Blue>（微信号flyabroad-nina)</font> 直接进行沟通。

[飞出国论坛]: http://bbs.fcgvisa.com?target=blank 
[飞出国香港]: http://flyabroad.hk?target=blank 
[飞出国]:http://flyabroad.me/contact/?target=blank 
[311111]: http://bbs.fcgvisa.com/t/fcg/1152?target=blank
[121311]: http://bbs.fcgvisa.com/t/fcg/942?target=blank
[121111]: http://bbs.fcgvisa.com/t/fcg/875?target=blank
[121312]: http://bbs.fcgvisa.com/t/fcg/943?target=blank
[121211]: http://bbs.fcgvisa.com/t/fcg/878?target=blank
[121299]: http://bbs.fcgvisa.com/t/fcg/939?target=blank
[121313]: http://bbs.fcgvisa.com/t/fcg/944?target=blank
[121212]: http://bbs.fcgvisa.com/t/fcg/882?target=blank
[121213]: http://bbs.fcgvisa.com/t/fcg/884?target=blank
[121214]: http://bbs.fcgvisa.com/t/fcg/886?target=blank
[121215]: http://bbs.fcgvisa.com/t/fcg/891?target=blank
[121316]: http://bbs.fcgvisa.com/t/fcg/947?target=blank
[121399]: http://bbs.fcgvisa.com/t/fcg/988?target=blank
[121411]: http://bbs.fcgvisa.com/t/fcg/991?target=blank
[121216]: http://bbs.fcgvisa.com/t/fcg/903?target=blank
[121317]: http://bbs.fcgvisa.com/t/fcg/948?target=blank
[121318]: http://bbs.fcgvisa.com/t/fcg/952?target=blank
[121321]: http://bbs.fcgvisa.com/t/fcg/955?target=blank
[311399]: http://bbs.fcgvisa.com/t/fcg/1163?target=blank
[133511]: http://bbs.fcgvisa.com/t/fcg/1058?target=blank
[121322]: http://bbs.fcgvisa.com/t/fcg/959?target=blank
[121217]: http://bbs.fcgvisa.com/t/fcg/926?target=blank
[121221]: http://bbs.fcgvisa.com/t/fcg/933?target=blank
[234213]: http://bbs.fcgvisa.com/t/fcg/1028?target=blank
[342211]: http://bbs.fcgvisa.com/t/fcg/1311?target=blank
[134211]: http://bbs.fcgvisa.com/t/fcg/1064?target=blank
[322312]: http://bbs.fcgvisa.com/t/fcg/1214?target=blank
[133112]: http://bbs.fcgvisa.com/t/fcg/1047?target=blank
[313213]: http://bbs.fcgvisa.com/t/fcg/1198?target=blank
[MLTSSL]:/au/occupations-lists/MLTSSL
[EOI评分]:/au/skilledselect
[Competent]:/au/skilledselect/english-requirement
[STSOL]:/au/occupations-lists/STSOL
[MLTSSL]: /au/skillselect/MLTSSL
[ceiling]: /au/skillselect/ceiling
[SkillSelect]: /au/skillselect/
[189]:/au/skilled/189
[MLTSSL]:/au/occupations-lists/MLTSSL
[190]:/au/skilled/190
[STSOL]:/au/occupations-lists/STSOL
[489]:/au/skilled/489
[EOI]:/au/skilledselect/EOI
